# weight-perterbation

./: .gitignore  combined_results.json  flake.nix  pyproject.toml
.virtual_documents/notebooks/: hbr.ipynb  ode_playground-Copy1.ipynb  ode_playground.ipynb  result_hbr-Copy1.ipynb  result_hbr-Copy2.ipynb  result_hbr-analytic.ipynb  result_hbr-base.ipynb  result_hbr-debias.ipynb  result_hbr_skip_stiff.ipynb  result_rober-Copy1.ipynb  result_rober-Copy2.ipynb  result_rober.ipynb  result_rober_skip_stiff.ipynb  result_template.ipynb
experiments/: base.py  hbr.yaml  hbr_analytic_derivatives.yaml  hbr_debias.yaml  hbr_header.yaml  hbr_skip_stiff.yaml  ode.py  ode_analytic_derivatives.py  ode_debiased.py  rober.yaml  rober_analytic_derivatives.yaml  rober_debias.yaml  rober_header.yaml  rober_skip_stiff.yaml  synthetic.py  synthetic.yaml
experiments/code/: hbr.py  shared.py  synthetic_depedent.py  synthetic_indepedent.py
experiments/data/: base_hbr.yaml  hydrogen_bromine_ode.csv  hydrogen_bromine_ode_skip_stiff.csv  indepedent.yaml  rober_ode.csv  rober_ode_skip_stiff.csv
experiments/scripts/: aggregate_results.py  generate_parameter_search.py  sim_ode.py
notebooks/: Untitled.ipynb  hbr.ipynb  hbr_debiased.csv  ode_playground-Copy1.ipynb  ode_playground.ipynb  result_hbr-analytic.ipynb  result_hbr-base.ipynb  result_hbr-base.py  result_hbr-debias.ipynb  result_hbr_skip_stiff.ipynb  result_rober-analytic.ipynb  result_rober-base.ipynb  result_rober-debias.ipynb  result_rober_skip_stiff.ipynb  rober_ode_skip_stiff.csv  synthetic_playground.ipynb  temp_data.csv
(+26 files in other folders)
