[project]
name = "weight-perturbation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"numpy",
	"scikit-learn",
	"matplotlib",
	"cvxpy",
	"pysindy",
]

[dependency-groups]
dev = [
	"pytest>=8.4.2",
	"pytest-cov>=7.0.0",
	"jupyterlab",
	"jupyterlab-lsp",
	"jupyterlab-vim",
	"python-lsp-server[all]",
	"notebook-intelligence",
]
